--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
 
   <!-- Pantalla de Agenda -->
   <div id="agendaScreen" class="screen">
-    <h1>AGENDA FINANCE FESTIVAL</h1>
+    <h2>AGENDA </h2>
 
     <!-- Sub-menú de categorías -->
     <div id="agendaOptions" class="sub-menu">
       <!-- Reemplaza URL_MAIN/TRADIFI/DEFI por las URLs que publicaste -->
-      <button data-url="https://docs.google.com/spreadsheets/d/e/2PACX-1vQv_Kko-e7Wy-i7fOLL5iZQrEFFLjvlh2QfqOwLJZeSvl5FYtHV5C8VGL8UA6AM2OI4myUMQKJcnj6O/pubhtml?gid=0&single=true"   class="btn-main">Main</button>
-      <button data-url="https://docs.google.com/spreadsheets/d/e/2PACX-1vQv_Kko-e7Wy-i7fOLL5iZQrEFFLjvlh2QfqOwLJZeSvl5FYtHV5C8VGL8UA6AM2OI4myUMQKJcnj6O/pubhtml?gid=480440681&single=true"class="btn-tradifi">Workshop TradiFi</button>
-      <button data-url="https://docs.google.com/spreadsheets/d/e/2PACX-1vQv_Kko-e7Wy-i7fOLL5iZQrEFFLjvlh2QfqOwLJZeSvl5FYtHV5C8VGL8UA6AM2OI4myUMQKJcnj6O/pubhtml?gid=315532814&single=true"   class="btn-defi">Workshop DeFi</button>
+      <button class="btn-main"> General </button>
+      <button class="btn-tradifi"> Main Detalle </button>
+
+      <button class="btn-defi">  Workshop Detalle </button>
     </div>
 
   
